# diploma_2024

./: logs.db  pyproject.toml
backend/: chatmanager.py  cli.py  datamodel.py  logs.db  main.py  pyproject.toml  settings.py  test.py  workflowmanager.py
backend/api/: router.py
backend/api/v1/: healthcheck.py
backend/llm/yandexgpt/: autogen_client.py  dto.py  http_client.py
backend/utils/: dbdefaults.json  dbutils.py  utils.py
backend/web/: app.py
backend/yandexgpt/: autogen_client.py  dto.py  http_client.py
frontend/: gatsby-config.ts
frontend/src/components/: header.tsx  layout.tsx
frontend/src/components/views/playground/: chatbox.tsx
